Fix header overflow issue

--- a/css/header.css
+++ b/css/header.css
@@ -43,6 +43,7 @@ header {
   -ms-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   z-index: 100; /* Capa z para la superposición */
+  overflow: auto;
 }
 
 /* Estilos para el fondo oscuro del menú desplegable */
